refactor relations: add new table to comunicate product with order